<resources>
    <string name="app_name">ExperienceGo</string>
    //-----------------Login--------------------------------
    //Main Fragment
    <string name="btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="btn_registrate">Regístrate</string>
    <string name="btn_empresa_sponsor">Empresa/Sponsor</string>
    //Login Fragment
    <string name="textView_inicio_sesion">Inicio Sesión</string>
    <string name="textView_email">E-mail</string>
    <string name="textView_password">Password</string>
    <string name="textView_olvido_password">¿Has olvidado la contraseña?</string>
    <string name="btn_ir_iniciar_sesion">Iniciar Sesion</string>
    <string name="btn_ir_registrate">Regístrate</string>
    //Registrate Fragment
    <string name="textView_Registrate">Regístrate</string>
    <string name="textView_nombre_de_usuario">NOMBRE</string>
    <string name="textView_primer_apellido_de_usuario">1º-APELLIDO</string>
    <string name="textView_segundo_apeliido_de_usuario">2º-APELLIDO</string>
    <string name="textView_dni_nie_del_usuario">DNI/NIE</string>
    <string name="textView_telefono_del_usuario">TELEFONO</string>
    <string name="textView_email_registrar">1º-E-MAIL</string>
    <string name="textView_otro_email_registrar">2º-E-MAIL</string>
    <string name="textView_contrasena">CONTRASEÑA</string>
    <string name="textView_repite_su_contrasena">REPITE SU CONTRASEÑA</string>
    <string name="check_Aceptar">Aceptar</string>
    <string name="textView_suscripcion">Deseas Suscribirte a travorium</string>

    <string name="action_settings">Settings</string>
    <string name="button_registrate">Registrate</string>
    <string name="textView_ya_tienes_cuenta_iniciar_sesion">Ya tienes cuenta. Iniciar Sesión</string>

    //Empresa/Sponsor Fragment
    <string name="button_creador_eventos">CREADOR DE EVENTOS</string>
    <string name="button_sponsor">SPONSOR</string>


    //---------------Menu-----------------------------
    //MenuActivity
    //top
    <string name="title_mis_recuerdos">Mis Recuerdos</string>

    //bottom
    <string name="title_home">Home</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_noticias">Noticias</string>
    <string name="title_suscribete">Suscripcion</string>

    //TabHome
    <string name="tab_eventos">Eventos</string>
    <string name="tab_mis_experiencia">Mis Experiencias</string>
    <string name="tab_enlaces">Enlaces</string>
    <string name="tab_noticias">Noticias</string>
    <string name="tab_contactos">Contactos</string>
    <string name="tab_agenda">Agenda</string>

    //tabHome Quitados
    <string name="tab_articulos">Articulos</string>
    <string name="tab_grupos">Grupos</string>

    //Fragmento Perfil
    <string name="btn_escaner_qr">ESCANER QR</string>
    <string name="text_perfil_completo">¡Tu perfil casi esta completo!</string>
    <string name="text_perfil_nombre">Jose Luis Paricio</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    //Fragmento Mis Recuerdos
    <string name="title_mis_eventos">Eventos</string>
    <string name="title_mis_experiencias">Experiencias</string>
    <string name="title_fecha_mis_experiencias">Fecha</string>

</resources>